--- a/Blowup And MaxRun (Thomas Aubin)/.project
+++ b/Blowup And MaxRun (Thomas Aubin)/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BlowupAndMaxRunThomasAubin</name>
+	<name>Blowup And MaxRun (Thomas Aubin)</name>
 	<comment></comment>
 	<projects>
 	</projects>
